--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "sourceMap": true,
     "allowJs": true,
     "moduleResolution": "node",
+    "strictNullChecks": true,
     "baseUrl": ".",
     "paths": {
       "@types-internal": ["./src/types"],
